# treestuff

./: .gitignore  README.md  speed.sh  treestuff.cabal  treestuff.hs
boggle_solver/: .gitignore  Makefile  array.hpp  array.tpp  boggle_solver  dictionary.c  dictionary.cpp  dictionary.h  dictionary.hpp  fileio.c  fileio.h  main.c  main.cpp  mystring.cpp  mystring.hpp  trie.c  trie.cpp  trie.h  trie.hpp
src/: Dictionary.hs  Main.hs
trie_in_c/: Makefile  run.sh  trie.c
trie_in_hs/: treestuff.cabal
trie_in_hs/src/: Dictionary.hs  FastTrie.hs  Main.hs  TreeStuff.hs
trie_in_py/: boggle.py  requirements.txt  trie.py
