name:                treestuff
version:             0.0.0.0
synopsis:            Messing around with lazy evaluation and theoretically infinite trees.
description:         Messing around with lazy evaluation and theoretically infinite trees.
homepage:            http://github.com/crockeo/treestuff
license:             MIT
license-file:        LICENSE
author:              Cerek Hillen
maintainer:          Cerek Hillen (cerekh@gmail.com)
copyright:           (c) 2014, Cerek Hillen
category:            Data
build-type:          Simple
cabal-version:       >=1.10

executable treestuff
  main-is:             Main.hs

  build-depends:       base == 4.7.*
               ,       lens == 4.4.0.2

  hs-source-dirs:      src

  default-language:    Haskell2010
